--- a/01-HTML-CSS/09-animations/chaim/index.html
+++ b/01-HTML-CSS/09-animations/chaim/index.html
@@ -1,23 +1,26 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animations</title>
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="stile.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="animations">
-      <div class="box">
-      <img src="0.jfif" alt="">
-      <h1>bmw x5 35i iii f15</h1>
-    <h3>35,800$</h3>
-    <h4>the best price</h4>
+    <i class="fa fa-arrow-circle-left" style="font-size:36px"></i>
+
+    <i class='fas fa-star'></i>
+    
     <div class="box1">
-    <div class="box2">
-        <img src="2.png" alt="">
+        <img src="images.jfif" alt="">
+        <h1>Audi Q7</h1>
+        <h3>35,800$</h3>
+    <h4>the best price</h4>
     <div class="box3">
         <img src="3.png" alt="">
     <div class="box4"></div>
