--- a/02-JavaScript/06-typescript/Example/index.html
+++ b/02-JavaScript/06-typescript/Example/index.html
@@ -14,5 +14,6 @@
 <body>
     <a href="https://www.typescriptlang.org/docs/handbook/typescript-from-scratch.html"><h1>Type script</h1></a>
     <img src='https://i.pinimg.com/736x/c3/8e/e8/c38ee8475ee7f3680f706c56c3a1194c.jpg' alt='type script'>
+    <script src="index.js"></script>
 </body>
 </html>
