--- a/02-JavaScript/06-typescript/marina/index.html
+++ b/02-JavaScript/06-typescript/marina/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-   <script src="index.js"></script> 
+   <script src="dist/index.js"></script> 
 </body>
 </html>
