--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/john/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/john/index.html
@@ -53,12 +53,19 @@
           <div class="days_deg5">18°</div>
           <div class="days_deg6">14°</div>
       </div>
-      <div class="navbar">
-          <div class="navbar_item1"><i class="fas fa-home"></i></div>
-          <div class="navbar_item2"><i class="far fa-flag"></i></div>
-          <div class="navbar_item3"><i class="far fa-heart"></i></div>
-          <div class="navbar_item4"><i class="fas fa-bars"></i></div>
-      </div>
-        
+      <div class="bar">
+        <div class="bar__icons">
+           <i class="fa fa-home fa-2x" style="color: #7b446a"></i>
+        </div>
+        <div class="bar__icons">
+            <i class="fa fa-map fa-2x" style="color: #436081;"></i>
+        </div>
+        <div class="bar__icons">
+         <i class="fa fa-heart fa-2x" style="color: #436081";></i>
+        </div>
+        <div class="bar__icons">
+            <i class="fa fa-bars fa-2x" style="color: #436081;"></i>
+        </div>
+</div>
 </body>
 </html>
