--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -188,11 +188,12 @@
             </div>
             <div class="bar__icons">
              <a target="_top" herf="#" id="active">
-                <a href="#" target="_blank" rel="noopener noreferrer" class="red">  <i class="fa fa-heart fa-2x" style="color: #7b446a;"></i>
+                <a href="index.html" target="_blank" rel="noopener noreferrer" class="red">  <i class="fa fa-heart fa-2x" style="color: #7b446a;"></i>
             </a> 
             </div>
             <div class="bar__icons">
-                <i class="fa fa-bars fa-2x" style="color: #436081;"></i>
+                <a href="locationDetails_Omri.html" target="_blank" rel="noopener noreferrer" class="red">
+                <i class="fa fa-bars fa-2x" style="color: #436081;"></i></a>
             </div>
  </div>
         
