--- a/01-HTML-CSS/09-animations/tamir/tamir2.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.html
@@ -74,6 +74,6 @@
             <p class='card2__loc'><i class="fas fa-map-marker-alt"></i> 30 km away</p>
         </div>
     </div>
-
+</body>
 
 </html>
