change color options

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -121,7 +121,7 @@
                         <div>sat</div>
                     </div>
                     <div id="landing__task__cal__days">
-                        <div class="prev-date">28</div>
+                        <!-- <div class="prev-date">28</div>
                         <div class="prev-date">29</div>
                         <div class="prev-date">30</div>
                         <div>1</div>
@@ -141,7 +141,7 @@
                         <div>15</div>
                         <div>16</div>
                         <div>17</div>
-                        <div>18</div>
+                        <div>18</div> -->
                         <div>19</div>
                         <div>20</div>
                         <div>21</div>
