--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -181,7 +181,8 @@
    
         <div class="bar">
             <div class="bar__icons">
-               <i class="fa fa-home fa-2x" style="color: #436081;"></i>
+                <a href="home.html" target="_blank" rel="noopener noreferrer">
+               <i class="fa fa-home fa-2x" style="color: #436081;"></i></a>
             </div>
             <div class="bar__icons">
                 <i class="fa fa-map fa-2x" style="color: #436081;"></i>
