--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/locationDetails_Omri.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/locationDetails_Omri.html
@@ -38,14 +38,15 @@
         </div>
         <div class="bar">
             <div class="bar__icons">
-               <i class="fa fa-home fa-2x" style="color: #436081;"></i>
+                <a href="home.html" target="_blank" rel="noopener noreferrer">
+               <i class="fa fa-home fa-2x" style="color: #436081;"></i></a>
             </div>
             <div class="bar__icons">
                 <i class="fa fa-map fa-2x" style="color: #436081;"></i>
             </div>
             <div class="bar__icons">
              <a target="_top" herf="#" id="active">
-                <a href="index.html" target="_blank" rel="noopener noreferrer" >  <i class="fa fa-heart fa-2x" style="color: #7b446a;"></i>
+                <a href="index.html" target="_blank" rel="noopener noreferrer" >  <i class="fa fa-heart fa-2x" style="color: #436081;"></i>
             </a> 
             </div>
             <div class="bar__icons">
