--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -13,12 +13,13 @@
     <div class="main">
       
             <div class="header">
-                <i class="fa fa-search fa-2x"></i>
-                <p>Search</p>
-               <!-- <div class="header__pen">
-            </div>-->
+                <div class="header__icon">
+                <i class="fa fa-search fa-2x"><span>Search</span> </i></div>
+                <div class="header__icon">
                 
-                <i class="fas fa-pen fa-2x"></i>
+            </div>
+            <div class="header__icon">
+                <i class="fas fa-pen fa-2x"></i></div>
             </div>
             <div class="contain">
             <div class="contain__box--austin">
