--- a/01-HTML-CSS/08-Responsive/Lior_project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/Lior_project.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="dist\index.js"></script>
+    <div class="general_container">
+        <div class="navbar">
+
+        </div>
+</div>
 </body>
 </html>
