--- a/01-HTML-CSS/09-animations/CSSfinal pro/YOSSI_CSS FINAL PROJECT - new/index.html
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/YOSSI_CSS FINAL PROJECT - new/index.html
@@ -46,7 +46,6 @@
                             <div>Spanish</div>
                         </span>
                     </div>
-
                 </div>
             </div>
             <div></div>
@@ -60,9 +59,9 @@
 
             </div>
             <div class="header__nav__middle">
-                <button class="header__nav__middle__button"><i class="fas fa-archway"></i> Discover</button>
-                <button class="header__nav__middle__button"><i class="fas fa-pepper-hot"></i> Restaurants</button>
-                <button class="header__nav__middle__button"><i class="fas fa-barcode"></i> Stores</button>
+                <button class="header__nav__middle__button-on"><i class="fas fa-archway"></i> Discover</button>
+                <button class="header__nav__middle__button-off"> <a href=""><i class="fas fa-pepper-hot"></i> Restaurants</a></button>
+                <button class="header__nav__middle__button-off"> <a href=""><i class="fas fa-barcode"></i> Stores</a></button>
             </div>
             <div></div>
             <div></div>
@@ -102,7 +101,7 @@
             </div>
             <div class="container-showcase__text__bottom">
                 <div>
-                    <h3>CHECK IT OUT!</h3>
+                    <h3>CHECK IT OUT</h3>
                 </div>
 
                 <div>
@@ -127,8 +126,8 @@
     <div class="container-day">
 
         <div class="container-day__box">
-            <div><img class="container-day__box__pic" style="background-color: rgb(209, 240, 229);"
-                    src="images/Group.png" alt=""></div>
+            <div><img class="container-day__box__pic" style="background-color: #d1f0e5;" src="images/Group.png" alt="">
+            </div>
             <div class="container-day__box__text">
                 <div>
                     <h2>Groups</h2>
@@ -162,8 +161,8 @@
             </div>
         </div>
         <div class="container-day__box">
-            <div><img img class="container-day__box__pic" style="background-color: rgb(209, 240, 229);"
-                    src="images/Basket.png" alt="">
+            <div><img img class="container-day__box__pic" style="background-color: #d1f0e5;" src="images/Basket.png"
+                    alt="">
             </div>
             <div class="container-day__box__text">
                 <div>
@@ -341,9 +340,10 @@
         </div>
     </div>
 
+
     <div class="container-headline">
         <div class="container-headline__text">
-            <h1>Stores</h1>
+            <h1>Shopping for the weekend</h1>
         </div>
         <div class="container-headline__right">
             <div class="container-headline__right__see-all"><a href=""> See all</a></div>
@@ -352,16 +352,183 @@
         </div>
     </div>
 
-    <div class="container-categories">
+    <div class="container-day">
+
+        <div class="container-day__box">
+            <div><img class="container-day__box__pic" style="background-color: #0d072e;" src="images/Group.png" alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Groups</h2>
+                    <h3>Set Your Basket</h3>
+                </div>
+                <div class="container-day__box__time">
+                    20-25<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;10.00 &sdot; &#36;&#36;<b>&#36;</b><b>&#36;</b> &sdot; &#128577
+                7.8
+            </div>
+        </div>
+        <div class="container-day__box">
+            <div><img img class="container-day__box__pic" style="background-color: #0d072e;" src="images/Picnic.png"
+                    alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Picnics</h2>
+                    <h3>Go Outdoors</h3>
+                </div>
+                <div class="container-day__box__time">
+                    20-25<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;14.00 &sdot; &#36;<b>&#36;</b><b>&#36;</b><b>&#36;</b> &sdot;
+                &#128578 8.4
+            </div>
+        </div>
+        <div class="container-day__box">
+            <div><img img class="container-day__box__pic" style="background-color: #0d072e;" src="images/Basket.png"
+                    alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Gifts</h2>
+                    <h3>Surprise Your Friends</h3>
+                </div>
+                <div class="container-day__box__time">
+                    25-35<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;12.00 &sdot; &#36;<b>&#36;</b><b>&#36;</b><b>&#36;</b> &sdot;
+                &#128515 9.2
+            </div>
+        </div>
+    </div>
+
+    <div class="container-headline">
+        <div class="container-headline__text">
+            <h1>Shopping for the weekend</h1>
+        </div>
+        <div class="container-headline__right">
+            <div class="container-headline__right__see-all"><a href=""> See all</a></div>
+            <div class="container-headline__right__arrows-left"><i class="fas fa-angle-left"></i></div>
+            <div class="container-headline__right__arrows-right"><i class="fas fa-angle-right"></i></div>
+        </div>
+    </div>
+
+    <div class="container-day">
+
+        <div class="container-day__box">
+            <div><img class="container-day__box__pic" style="background-color: #fd8e43;" src="images/Group.png" alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Groups</h2>
+                    <h3>Set Your Basket</h3>
+                </div>
+                <div class="container-day__box__time">
+                    20-25<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;10.00 &sdot; &#36;&#36;<b>&#36;</b><b>&#36;</b> &sdot; &#128577
+                7.8
+            </div>
+        </div>
+        <div class="container-day__box">
+            <div><img img class="container-day__box__pic" style="background-color: #fd8e43;" src="images/Picnic.png"
+                    alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Picnics</h2>
+                    <h3>Go Outdoors</h3>
+                </div>
+                <div class="container-day__box__time">
+                    20-25<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;14.00 &sdot; &#36;<b>&#36;</b><b>&#36;</b><b>&#36;</b> &sdot;
+                &#128578 8.4
+            </div>
+        </div>
+        <div class="container-day__box">
+            <div><img img class="container-day__box__pic" style="background-color: #fd8e43;" src="images/Basket.png"
+                    alt="">
+            </div>
+            <div class="container-day__box__text">
+                <div>
+                    <h2>Gifts</h2>
+                    <h3>Surprise Your Friends</h3>
+                </div>
+                <div class="container-day__box__time">
+                    25-35<br>min
+                </div>
+            </div>
+            <div class="container-day__box__icons">
+                <i class="fas fa-biking"></i> &#8362;12.00 &sdot; &#36;<b>&#36;</b><b>&#36;</b><b>&#36;</b> &sdot;
+                &#128515 9.2
+            </div>
+        </div>
+    </div>
+
+    <!-- FOORET: -->
+
+    <footer class="footer">
+
+        <div class="footer-container-top">
+            <div></div>
+            <div><img class="footer-container-top__logo" src="images/mango-logo.png" alt="">
+                <h2>Download the app</h2>
+                <img class="app-play" src="images/app-play.png" alt="">
+            </div>
+            <div class="footer-container-top__text">
+                <h2>Let's do this together</h2>
+                <h3><a href="">For couriers</a></h3>
+                <h3><a href="">For restaurants</a></h3>
+                <h3><a href="">For stores</a></h3>
+                <h3><a href="">For companies</a></h3>
+                <h3><a href="">For Wolt Delivery</a></h3>
+                <h3><a href="">Jobs</a></h3>
+            </div>
+            <div class="footer-container-top__text">
+                <h2>Wolt links</h2>
+                <h3><a href="">Media</a></h3>
+                <h3><a href="">Wolt blog</a></h3>
+                <h3><a href="">Engineering blog</a></h3>
+                <h3><a href="">Responsibility</a></h3>
+                <h3><a href="">Security</a></h3>
+                <h3><a href="">About us</a></h3>
+            </div>
+            <div></div>
+        </div>
 
 
-        <script>
-            // When the user clicks on div, open the popup
-            function myFunction() {
-                var popup = document.getElementById("myPopup");
-                popup.classList.toggle("show");
-            }
-        </script>
+        <div class="footer-bottom">
+            <div></div>
+            <div>&nbsp; ©️ Mango 2014–2021</div>
+            <div><a href="">Accessibility statement</a>&nbsp; &nbsp; &nbsp; 
+                <a href="">Terms and conditions</a>
+            </div>
+            <div class="footer-bottom__social-media">
+                <img src="images/social-media.png" alt="">
+            </div>
+            <div></div>
+        </div>
+    </footer>
+
+    <script>
+        // When the user clicks on div, open the popup
+        function myFunction() {
+            var popup = document.getElementById("myPopup");
+            popup.classList.toggle("show");
+        }
+    </script>
 
 </body>
 
