--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -58,8 +58,7 @@
                     <div class="contain__box__up contain__box__up--city">
                     <h6> 
                         New York
-                    </h6></div>
-                    <div class="contain__box__up contain__box__up--state">
+                    </h6>
                     <p>
                         USA
                     </p>
@@ -105,8 +104,7 @@
                     <h6> 
                         Jakarta
                     </h6>
-                    </div>
-                    <div class="contain__box__up contain__box__up--state">
+                    
                     <p>
                         INA
                     </p>
@@ -133,8 +131,7 @@
                     <div class="contain__box__up contain__box__up--city">
                     <h6> 
                         Tokyo
-                    </h6></div>
-                    <div class="contain__box__up contain__box__up--state">
+                    </h6>
                     <p>
                        Japan
                     </p>
@@ -142,7 +139,8 @@
                   <div class="contain__box__up contain__box__up--bigIcon">
                     <i class='fas fa-cloud-showers-heavy fa-gradient fa-4x' style="
                     width: 100px; height: 100px;
-                    "></i>
+                    "></i></div>
+                     <div class="contain__box__up contain__box__up--bigIcon">
                     <div class="rainy">
                     <div class="rain"></div>
                     <div class="rain"></div>
@@ -170,8 +168,7 @@
                     <h6> 
                         Bangkok
                     </h6>
-                    </div>
-                    <div class="contain__box__up contain__box__up--state">
+                    
                     <p>
                         THAI
                     </p>
@@ -199,14 +196,14 @@
                     <div class="contain__box__up contain__box__up--city">
                     <h6> 
                         Manila
-                    </h6></div>
-                    <div class="contain__box__up contain__box__up--state">
+                    </h6>
                     <p>
                        FLP
                     </p></div>
                     <div class="contain__box__up contain__box__up--bigIcon">
                         <i class="fas fa-cloud-showers-heavy fa-gradient fa-4x" style="
-                        width: 100px; height: 100px;"></i>
+                        width: 100px; height: 100px;"></i></div>
+                         <div class="contain__box__up contain__box__up--bigIcon">
                         <div class="rainy">
                     <div class="rain"></div>
                     <div class="rain"></div>
