--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -11,7 +11,7 @@
   <div class="gauge">
     <div class="gauge__body">
       <div class="gauge__body__fill"></div>
-      <div class="gauge__body__cover1"></div>
+      <div class="gauge__body__cover1"><span>🔥</span></br><b>92%</b></div>
       <div class="gauge__body__cover2"></div>
     </div>
   </div>
