--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
-<body>
+<body id="wallet">
     <div class="header">
         <button class="header__icon">
             <svg viewBox="289.5 128 14 17">
