--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -147,9 +147,10 @@
                     </p>
                   </div></div>
                   <div class="contain__box__up contain__box__up--bigIcon">
+                    <div class="contain__box__up contain__box__up--bogicon--bigIcons">
                     <i class='fas fa-cloud-showers-heavy fa-gradient fa-4x'
                     ></i></div>
-                     <div class="contain__box__up contain__box__up--bigIcon">
+                    <div class="contain__box__up contain__box__up--bigIcon--bigIcons">
                     <div class="rainy">
                     <div class="rain"></div>
                     <div class="rain"></div>
@@ -157,7 +158,7 @@
                     <div class="rain"></div>
                     <div class="rain"></div>
                   </div>
-                  </div></div>
+                  </div></div></div>
                   <div class="contain__box__down">
                   <div class="contain__box__down contain__box__down--smalIconsLeft">
                     <i class="fa fa-tint"><span>17%</span></i>
@@ -216,8 +217,9 @@
                     </p></div></div>
                     
                     <div class="contain__box__up contain__box__up--bigIcon">
+                        <div class="contain__box__up contain__box__up--bigIcon--bigIcons">
                         <i class="fas fa-cloud-showers-heavy fa-gradient fa-4x"></i></div>
-                         <div class="contain__box__up contain__box__up--bigIcon">
+                        <div class="contain__box__up contain__box__up--bigIcon--bigIcons">
                         <div class="rainy">
                     <div class="rain"></div>
                     <div class="rain"></div>
@@ -225,7 +227,7 @@
                     <div class="rain"></div>
                     <div class="rain"></div>
                     </div>
-                    </div></div>
+                    </div></div></div>
                     <div class="contain__box__down">
                     <div class="contain__box__down contain__box__down--smalIconsLeft">
                     <i class="fa fa-tint"><span>17%</span></i></div>
