--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
@@ -11,18 +11,19 @@
 
 <div class="TopBox">
     <p>Sport club</p>
-    <h2>Muscle Magic</h2>
-    <h2>356789045673456</h2>
+    <h3>Muscle Magic</h3>
+    <h3>356789045673456</h3>
     <p>Used 7/10 activities</p>
-    
+    <div class="container">
+    <div class="progressBar"></div>
 </div>
 </div>
 
 <div class="Box">
-    <div class="BoxOptions"><img src="Images/add.png" alt=""><p>Refill activities</p><img src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/add.png" alt=""><p>Refill activities</p><img  src="Images/arrow.png"></div>
     <div class="BoxOptions"><img src="Images/friends.png" alt=""><p>Pass to a friend</p><img src="Images/arrow.png"></div>
-    <div class="BoxOptions"><img src="Images/location.png" alt=""><p>Our clubs</p><img src="Images/arrow.png"></div>
-    <div class="BoxOptions"><img src="Images/settings.png" alt=""><p>Account setup</p><img src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/location.png" alt=""><p>Our clubs</p><img id="arrow" src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/settings.png" alt=""><p>Account setup</p><img  src="Images/arrow.png"></div>
 </div>
 
     
