shani css project

--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -13,7 +13,7 @@
 <body class="cartPage">
     <div class="header_categories">
         <div class="icon" style="font-size: 44px;">
-            <i class="fas fa-long-arrow-alt-left"></i>
+           <a href="plantCard.html"> <i class="fas fa-long-arrow-alt-left"></i></a>
         </div>
     </div>
 
@@ -23,9 +23,9 @@
             <h1>My Cart</h1>
         </div>
         <div class="myCart__grid__box">
-            <img src="imgCart/myCart1.jpg">
+            <img class="img img--plant1" src="imgCard/cactus.png">
             <div class="leftside">
-                <h3>Dracaena </h3>
+                <h3>Cactus </h3>
                 <p>Nontoxic</p>
                 <input type="number" min="1" value="1">
             </div>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="myCart__grid__box">
-            <img src="imgCart/myCart2.jpg">
+            <img class="img img--plant2"src="imgCart/Cart2.png">
             <div class="leftside">
                 <h3>Milanus</h3>
                 <p>Nontoxic</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="myCart__grid__box">
-            <img src="imgCart/myCart3.jpg">
+            <img class="img img--plant3"src="imgCart/Cart3.png">
             <div class="leftside">
                 <h3>Euonymus</h3>
                 <p>Nontoxic</p>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="buttons">
-            <button class="button__add">Add more</button>
+           <button class="button__add"><a href="mainpage.html"> Add more</a></button>
             <button class="button__checkout">Checkout</button>
         </div>
     </div>
