shani css project

--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -13,7 +13,7 @@
 <body class="cartPage">
     <div class="header_categories">
         <div class="icon" style="font-size: 44px;">
-           <a href="plantCard.html"> <i class="fas fa-long-arrow-alt-left"></i></a>
+        <i class="fas fa-long-arrow-alt-left"></i>
         </div>
     </div>
 
@@ -25,7 +25,7 @@
         <div class="myCart__grid__box">
             <img class="img img--plant1" src="imgCard/cactus.png">
             <div class="leftside">
-                <h3>Cactus </h3>
+                <h3><a href="plantCard.html"> Cactus </a></h3>
                 <p>Nontoxic</p>
                 <input type="number" min="1" value="1">
             </div>
