shani css project links

--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -13,7 +13,7 @@
 <body class="cartPage">
     <div class="header_categories">
         <div class="icon" style="font-size: 44px;">
-        <i class="fas fa-long-arrow-alt-left"></i>
+            <a href="menu.html"><i class="fas fa-long-arrow-alt-left"> </i></a>
         </div>
     </div>
 
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="myCart__grid__box">
-            <img class="img img--plant2"src="imgCart/Cart2.png">
+            <img class="img img--plant2" src="imgCart/Cart2.png">
             <div class="leftside">
                 <h3>Milanus</h3>
                 <p>Nontoxic</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="myCart__grid__box">
-            <img class="img img--plant3"src="imgCart/Cart3.png">
+            <img class="img img--plant3" src="imgCart/Cart3.png">
             <div class="leftside">
                 <h3>Euonymus</h3>
                 <p>Nontoxic</p>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="buttons">
-           <button class="button__add"><a href="mainpage.html"> Add more</a></button>
+            <button class="button__add"><a href="mainpage.html"> Add more</a></button>
             <button class="button__checkout">Checkout</button>
         </div>
     </div>
