--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -452,7 +452,7 @@
                     </div>
                     <div class="wallet-portfolio__list__item__name">
                         <p>ROSE</p>
-                        <p>OASIS NETWORK</p>
+                        <p>OASIS</p>
                     </div>
                     <div class="wallet-portfolio__list__item__graph">
                         <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
