--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/menu.html
@@ -16,13 +16,13 @@
 
   <div class="wrapper">
     <div class="item"><a href="exple.html"><img
-          src="https://tse1.mm.bing.net/th/id/OIP.gQ1sXFGQIDAqxoflJRAw_gHaE6?w=271&h=180&c=7&r=0&o=5&pid=1.7"
+          src="img/plant1.jpg"
           alt=""></a></div>
     <div class="item"> <a href="exple.html"><img
-          src="https://tse1.mm.bing.net/th/id/OIP.gQ1sXFGQIDAqxoflJRAw_gHaE6?w=271&h=180&c=7&r=0&o=5&pid=1.7"
+          src="img/plant2.jpg"
           alt=""></a></div>
     <div class="item"> <a href="exple.html"><img
-          src="https://tse1.mm.bing.net/th/id/OIP.gQ1sXFGQIDAqxoflJRAw_gHaE6?w=271&h=180&c=7&r=0&o=5&pid=1.7"
+          src="img/plant3.jpeg"
           alt=""></a></div>
   </div>
 
