--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
@@ -9,18 +9,25 @@
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="cont">
     <div class="wrapper">
         <div class="wrapper_city"><h1>San Fransisco</h1></div>
         <div class="wrapper_photo"><i class="fas fa-cloud-sun"></i></div>
         <div class="wrapper_degrees"><h1>18°</h1></div>
-        <div class="wrapper_weather">
+        <div class="nothing1"></div>
+        <div class="back"><div class="wrapper_weather">
             <h1>Cloudy</h1>
-        </div>
+        </div></div>
       </div>
       <div class="weatherBar">
           <div class="weatherBar_rain"><h4><i class="fas fa-tint"></i>13%</h4></div>
           <div class="weatherBar_mbar"><h4><i class="fas fa-info-circle"></i>0.533 mBar</h4></div>
           <div class="weatherBar_wind"><h4><i class="fas fa-wind"></i>9km/h</h4></div>
+      </div>
+      <div class="graph">
+          <div class="graph_sun">hgvg</div>
+          <div class="graph_graphic"></div>
+          <div class="graph_sun2">jgjgvgjv</div>
       </div>
       <div class="hours">
           <div class="hours_1">10 AM</div>
@@ -70,6 +77,7 @@
             <a href="locationDetails_Omri.html" target="_blank" rel="noopener noreferrer" class="red">
             <i class="fa fa-bars fa-2x" style="color: #436081;"></i></a>
         </div>
+</div>
 </div>
 </body>
 </html>
