--- a/01-HTML-CSS/09-animations/CSSfinal pro/CheckOut Mango/jenia.html
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/CheckOut Mango/jenia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="/01-HTML-CSS/09-animations/CSSfinal pro/CheckOut Mango/dist/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
