--- a/01-HTML-CSS/09-animations/mishaschedule/index.html
+++ b/01-HTML-CSS/09-animations/mishaschedule/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+  <!---- Michael STARTs -->
    
     <div class='bigwrapper'>
 
@@ -862,6 +862,9 @@
     </div>
         
     <script src="https://kit.fontawesome.com/e87667ff79.js" crossorigin="anonymous"></script>
+
+    <!-- Michael ENDs -->
+
 </body>
 
 
