--- a/01-HTML-CSS/09-animations/mishaschedule/Home.html
+++ b/01-HTML-CSS/09-animations/mishaschedule/Home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"> 
 </head>
 <body>
+    <div class="shimon">
     <div class="container">
         <div class="bird">
             <img src="bird.jpg" alt="bird">
@@ -48,6 +49,7 @@
         </box>
 
     </div>
+</div>
 </div>
 
     
