--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -115,9 +115,11 @@
                     <p>
                         INA
                     </p>
-                    </div></div>
+                    </div>
+                </div>
                     <div class="contain__box__up contain__box__up--bigIcon">
-                    <i class="fas fa-cloud-sun fa-gradient fa-4x"></i></div>
+                  <i class="fas fa-cloud-sun fa-gradient"></i>
+                </div>
                     </div>
                     <div class="contain__box__down">
                     <div class="contain__box__down contain__box__down--smalIconsLeft">
@@ -147,8 +149,7 @@
                     </p>
                   </div></div>
                   <div class="contain__box__up contain__box__up--bigIcon">
-                    <i class='fas fa-cloud-showers-heavy fa-gradient fa-4x'
-                    ></i></div>
+                    <i class='fas fa-cloud-showers-heavy fa-gradient fa-4x'></i></div>
                     <div class="contain__box__up contain__box__up--bigIcon">
                     <div class="rainy">
                     <div class="rain"></div>
@@ -186,8 +187,7 @@
                     </p>
                   </div></div>
                   <div class="contain__box__up contain__box__up--bigIcon">
-                    <i class="fas fa-cloud fa-gradient fa-4x" style="
-                    width: 100px; height: 100px;"></i>
+                    <i class="fas fa-cloud fa-gradient fa-4x"></i>
                   </div>
                     </div>
                     <div class="contain__box__down">
