--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
@@ -56,7 +56,7 @@
       <div class="bar">
         <div class="bar__icons">
             <a href="locationDetails_Omri.html" target="_blank" rel="noopener noreferrer" class="red">
-           <i class="fa fa-home fa-2x" sstyle="color: #7b446a;""></i></a>
+           <i class="fa fa-home fa-2x" style="color: #7b446a;"></i></a>
         </div>
         <div class="bar__icons">
             <i class="fa fa-map fa-2x" style="color: #436081;"></i>
