--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
@@ -14,7 +14,29 @@
       <div class="Container__header__Welcome">Welcome,Marina 👏</div>
       <div class="Container__header__MenuBtn"><img src="Images/MenuBtn.png"></div>
     </div>
-    <div class="Container__Wil">Wil</div>
+    <div class="Container__Wil">
+      <div class="Container__Wil__statBox">
+        <div class="Container__Wil__statBox__heading"></div>
+        <div class="Container__Wil__statBox__gaugeBox">
+          <div class="gauge">
+            <div class="gauge__body">
+              <div class="gauge__body__fill"></div>
+              <div class="gauge__body__cover1">
+                <div class="gauge__body__cover1__circle">
+                 <div class="gauge__body__cover1__circle--a">🔥</div>
+                 <div class="gauge__body__cover1__circle--b"><b>92%</b></div>
+                 <div class="gauge__body__cover1__circle--c">Activity</div>
+                </div>
+              </div>
+              <div class="gauge__body__cover2"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Container__Wil__statBox__statBtn"></div>
+        <div class="Container__Wil__statBox__viewDetails"></div>
+      </div>
+    </div>
+ 
     <div class="Container__Roi">Roi</div>
     <div class="Container__Yael">Yael</div>
     <div class="Container__Navbar">
