updating a little bit

--- a/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
+++ b/01-HTML-CSS/08-Responsive/Lior_project/FINAL/Lior_Project.html
@@ -24,7 +24,7 @@
         <ul>
             <!--718  start---------------------------------------------------------------------->
             <li class="dropDown">
-                <li><a href="#">718</a>
+                <li class="CarName"><a href="#">718</a>
                     <ul class="menu-area">
                         <ul>
                             <h4></h4>
