--- a/01-HTML-CSS/09-animations/mishaschedule/activities.html
+++ b/01-HTML-CSS/09-animations/mishaschedule/activities.html
@@ -21,7 +21,7 @@
     <div class="bodyActivities">
 
 
-        <div class="topIcons">
+        <div class="bodyActivities__topIcons">
             <p style="margin-left: 1%; margin-top: 0.5%;" class="topIcons--time">11:03</p>
             <div class="topIcons__left">
                 <ion-icon class="topIcons__left--wifi" name="wifi-outline"></ion-icon>
@@ -30,35 +30,35 @@
         </div>
 
 
-        <div class="gridUserIcon">
+        <div class="bodyActivities__gridUserIcon">
             <ion-icon style="margin-left: 3%;" class="gridUserIcon--icon" name="grid-outline"></ion-icon>
             <img class="gridUserIcon--userImg" img src="img/user.png" height="42" />
         </div>
 
 
-        <div class="subTitle">
+        <div class="bodyActivities__subTitle">
             <h4 style="margin-left: 3%;" class="subTitle">My Activities</h4>
         </div>
 
 
-        <div class="search">
+        <div class="bodyActivities__search">
             <ion-icon name="search-outline"></ion-icon><input type="text" placeholder="         Search" name="search">
         </div>
 
 
-        <nav class="navBar">
-            <ul class="navBar__list">
-                <li class="navBar__item">
-                    <a class="navBar__list--link" herf="#">Daily</a>
+        <nav class="bodyActivities__navBar">
+            <ul class="bodyActivities__navBar__list">
+                <li class="bodyActivities__navBar__item">
+                    <a class="bodyActivities__navBar__list--link" herf="#">Daily</a>
                 </li>
-                <li class="navBar__item">
-                    <a class="navBar__list--link" href="#">Weekly</a>
+                <li class="bodyActivities__navBar__item">
+                    <a class="bodyActivities__navBar__list--link" href="#">Weekly</a>
                 </li>
-                <li class="navBar__item">
-                    <a class="navBar__list--link" href="#">Monthly</a>
+                <li class="bodyActivities__navBar__item">
+                    <a class="bodyActivities__navBar__list--link" href="#">Monthly</a>
                 </li>
-                <li class="navBar__item">
-                    <a class="navBar__list--link" href="#">Yearly</a>
+                <li class="bodyActivities__navBar__item">
+                    <a class="bodyActivities__navBar__list--link" href="#">Yearly</a>
                 </li>
             </ul>
         </nav>
