or project update

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
@@ -33,7 +33,8 @@
                     alt="">
             </div>
             <div id="landing-home__search">
-                <input type="text" placeholder="Search..">
+                <i class="material-icons">search</i>
+                <input type="text" placeholder="">
             </div>
 
 
@@ -60,7 +61,6 @@
             </div>
             <div id="landing-home__recent">
                 <div class="recent__title">
-
                     <h2>Recently Created</h2>
                     <i class="material-icons">keyboard_arrow_right</i>
                 </div>
@@ -71,12 +71,14 @@
                         <div id="box__flex">
                             <div class="box__header">
                                 <div class="box__title">
-                                    <p class="box__title-text">mobile app</p>
+                                    <p class="box__title-text box__title-home-text">mobile app</p>
                                 </div>
                             </div>
                             <div class="box__expln box__expln-home">
-                                <i class="material-icons">schedule</i> 
-                                <p>2 sep</p>
+                                <div class="flex-date">
+                                    <i class="material-icons">schedule</i>
+                                    <p>2 sep</p>
+                                </div>
                             </div>
                             <h4>high priority</h4>
                         </div>
@@ -85,12 +87,14 @@
                         <div id="box__flex">
                             <div class="box__header">
                                 <div class="box__title">
-                                    <p class="box__title-text">web</p>
+                                    <p class="box__title-text box__title-home-text">web</p>
                                 </div>
                             </div>
                             <div class="box__expln box__expln-home">
+                                <div class="flex-date">
                                 <i class="material-icons">schedule</i>
                                 <p>30 nov</p>
+                            </div>
                             </div>
                             <h4>low priority</h4>
                         </div>
@@ -99,12 +103,14 @@
                         <div id="box__flex">
                             <div class="box__header">
                                 <div class="box__title">
-                                    <p class="box__title-text">PC</p>
+                                    <p class="box__title-text box__title-home-text">PC</p>
                                 </div>
                             </div>
                             <div class="box__expln box__expln-home">
+                                <div class="flex-date">
                                 <i class="material-icons">schedule</i>
                                 <p>25 dec</p>
+                            </div>
                             </div>
                             <h4>low priority</h4>
                         </div>
