--- a/01-HTML-CSS/09-animations/mishaschedule_v2/activities.html
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/activities.html
@@ -9,7 +9,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Activities</title>
-    <link rel="stylesheet" href="dist/activities.css">
+    <link rel="stylesheet" href="dist/style3.css">
 </head>
 
 <body>
