--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
@@ -100,9 +100,25 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
                     </li>
-
                 </ul>
 
+                <ul class="list">
+                    <li class="list__line">
+                        <div class="box-logo">
+                            <i class="fas fa-book"></i>
+                        </div>
+                            <P class="logo"> Portfolio </P>
+                    </li>
+                    <li class="list__line">
+                       <div class="box">
+                            <p> nilson project </p>
+                    </div>
+                        <div class="box">
+                            <i class="fas fa-ellipsis-h"></i>
+                        </div>
+                    </li>
+
+                </ul>
 
 
             </div>
