--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/locationDetails_Omri.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/locationDetails_Omri.html
@@ -13,7 +13,7 @@
 <body>
     <div class="details">
         <div class="details__location">
-            <i class="fas fa-map-marker-alt"> Your Location Now</i>
+            <i class="fas fa-map-marker-alt"> <span class="text">Your Location Now</span> </i>
             <p>Sun Fransisco, California, USA</p>
         </div>
         <div class="details__dayTime">
