--- a/01-HTML-CSS/09-animations/tamir/tamir2.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.html
@@ -29,7 +29,15 @@
 
     <div class='section2'>
         <div class=wrapper>
-            <p class='wrapper__info'><i class="fas fa-car-side"></i></i> model:<span class='wrapper__name'>siat</span>
+            <p class='wrapper__info'><i class="fas fa-car-side"></i></i> model:<span class='wrapper__name'>seat</span>
+            <div class="drop">
+                <button class="drop__btn">cars</button>
+                <div class="drop__content">
+                    <a href="#">Seat</a>
+                    <a href="#">Honda</a>
+                    <a href="#">Mazerati</a>
+                </div>
+            </div>
             </p>
             <div class="wrapper__button">
                 <span class='wrapper__num'>1</span>
@@ -58,14 +66,14 @@
         <span class='card__img'>
             <img
                 src="https://c.wallhere.com/photos/ea/f9/2016_Seat_Ateca_netcarshow_netcar_car_images_car_photo-469203.jpg!d"></img>
-           
-        <div class='card__info'>
-            <h1>SEAT ateca x2 (3s) </h1>
-        </div>
-        <div class='card__subinfo'>
-            <p class='card__price'> $50,000 <i class="fas fa-fire"></i></p>
-            <p class='card__loc'><i class="fas fa-map-marker-alt"></i> 35 km away</p>
-        </div>
+
+            <div class='card__info'>
+                <h1>SEAT ateca x2 (3s) </h1>
+            </div>
+            <div class='card__subinfo'>
+                <p class='card__price'> $50,000 <i class="fas fa-fire"></i></p>
+                <p class='card__loc'><i class="fas fa-map-marker-alt"></i> 35 km away</p>
+            </div>
     </div>
     <div class='card'>
         <span class='card__img'>
