--- a/01-HTML-CSS/09-animations/tamir/tamir2.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.html
@@ -21,24 +21,28 @@
 
     <div class=wrapperfirst>
         <ul>
-            <a href="cars">cars</a>
-            <a href="bikes">bikes</a>
-            <a href="trucks">trucks</a>
+            <a href="#">cars</a>
+            <a href="#">bikes</a>
+            <a href="#">trucks</a>
         </ul>
     </div>
 
     <div class='section2'>
         <div class=wrapper>
-            <p class='wrapper__info'><i class="fas fa-car-side"></i></i> model:<span class='wrapper__name'>seat</span>
+            <p class='wrapper__info'><i class="fas fa-car-side"></i></i> model:
             <div class="drop">
-                <button class="drop__btn">cars</button>
+                <button class="drop__btn">Cars</button>
                 <div class="drop__content">
-                    <a href="#">Seat</a>
-                    <a href="#">Honda</a>
-                    <a href="#">Mazerati</a>
+                    <a href="https://www.seat.co.il/">Seat</a>
+                    <a href="https://www.honda.co.il/">Honda</a>
+                    <a href="https://www.maserati.com/us/en">Maserati</a>
                 </div>
             </div>
+            <span class='wrapper__name'>
+
+            </span>
             </p>
+
             <div class="wrapper__button">
                 <span class='wrapper__num'>1</span>
             </div>
