--- a/01-HTML-CSS/09-animations/CSSfinal pro/CSSfinal pro2/Michael.html
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/CSSfinal pro2/Michael.html
@@ -175,6 +175,50 @@
         </div>
     </div>
 
+    <footer class="footer">
+
+        <div class="footer-container-top">
+            <div></div>
+            <div><img class="footer-container-top__logo" src="images/mango-logo.png" alt="">
+                <h2>Download the app</h2>
+                <img class="app-play" src="images/app-play.png" alt="">
+            </div>
+            <div class="footer-container-top__text">
+                <h2>Let's do this together</h2>
+                <h3><a href="">For couriers</a></h3>
+                <h3><a href="">For restaurants</a></h3>
+                <h3><a href="">For stores</a></h3>
+                <h3><a href="">For companies</a></h3>
+                <h3><a href="">For Wolt Delivery</a></h3>
+                <h3><a href="">Jobs</a></h3>
+            </div>
+            <div class="footer-container-top__text">
+                <h2>Wolt links</h2>
+                <h3><a href="">Media</a></h3>
+                <h3><a href="">Wolt blog</a></h3>
+                <h3><a href="">Engineering blog</a></h3>
+                <h3><a href="">Responsibility</a></h3>
+                <h3><a href="">Security</a></h3>
+                <h3><a href="">About us</a></h3>
+            </div>
+            <div></div>
+        </div>
+
+
+        <div class="footer-bottom">
+            <div></div>
+            <div>&nbsp; ©️ Mango 2014–2021</div>
+            <div><a href="">Accessibility statement</a>&nbsp; &nbsp; &nbsp;
+                <a href="">Terms and conditions</a>
+            </div>
+            <div class="footer-bottom__social-media">
+                <img src="images/social-media.png" alt="">
+            </div>
+            <div></div>
+        </div>
+    </footer>
+
+
 
     
     <script>
