--- a/01-HTML-CSS/09-animations/chaim/index.html
+++ b/01-HTML-CSS/09-animations/chaim/index.html
@@ -7,12 +7,11 @@
     <title>Animations</title>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/style.css">
-    <link rel="stylesheet" href="stile.scss">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class= wrapper1>
-            <div class="box1">
+    <div class= "wrapper1">
+            <div class="section">
                 <img src="images (1).jfif" alt="">     
                 <h1>Audi Q7</h1>
                 <h3>35,800$ &nbsp; &nbsp; &nbsp; &nbsp; best price</h3>
@@ -41,11 +40,10 @@
     </div>
 <div>
     <div class= wrapper1>
-        <div class="box1">
+        <div class="section">
             <img src="3.jpg" alt="">     
             <h1>model new tesla 2021</h1>
             <h3>75,700$ &nbsp; &nbsp; &nbsp; &nbsp; best price</h3>
-            
             <h4>5</h4>
             <div class="icon">
                <i class='fa fa-fire' style='font-size:25px'></i>  
