--- a/01-HTML-CSS/09-animations/tamir/tamir2.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.html
@@ -25,17 +25,18 @@
             <a href="#">bikes</a>
             <a href="#">trucks</a>
         </ul>
+
     </div>
 
     <div class='section2'>
         <div class=wrapper>
             <p class='wrapper__info'><i class="fas fa-car-side"></i></i> model:
             <div class="drop">
-                <button class="drop__btn">Cars</button>
+                <button class="drop__btn">Seat</button>
                 <div class="drop__content">
-                    <a href="https://www.seat.co.il/">Seat</a>
                     <a href="https://www.honda.co.il/">Honda</a>
                     <a href="https://www.maserati.com/us/en">Maserati</a>
+                    <a href="https://www.seat.co.il/">more...</a>
                 </div>
             </div>
             <span class='wrapper__name'>
