--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
@@ -14,7 +14,9 @@
 <body>
     <div class="header_categories">
         <div class="icon" style="font-size: 44px;">
+            <a href="menu.html">
             <i class="fas fa-long-arrow-alt-left"></i>
+            </a>
         </div>
        <div class="header_categories_text">
            Add Plants
@@ -64,7 +66,9 @@
             <i class="fas fa-tree" style="font-size: 25px;"></i>
         </div>
         <div class="Nav_bottom_box2">
+            <a href="cartpage.html">
             <i class="fas fa-shopping-cart" style="font-size: 25px;"></i>
+        </a>
         </div>
         <div class="Nav_bottom_box3">
         <i class="fas fa-cog" style="font-size: 25px;"></i>
