--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/home.html
@@ -20,15 +20,16 @@
         </div></div>
       </div>
       <div class="weatherBar">
-          <div class="weatherBar_rain"><h4><i class="fas fa-tint"></i>13%</h4></div>
-          <div class="weatherBar_mbar"><h4><i class="fas fa-info-circle"></i>0.533 mBar</h4></div>
-          <div class="weatherBar_wind"><h4><i class="fas fa-wind"></i>9km/h</h4></div>
+          <div class="weatherBar_rain"><h4><i class="fas fa-tint"></i>    13%</h4></div>
+          <div class="weatherBar_mbar"><h4><i class="fas fa-info-circle"></i>   0.533 mBar</h4></div>
+          <div class="weatherBar_wind"><h4><i class="fas fa-wind"></i>    9km/h</h4></div>
       </div>
-      <div class="graph">
-          <div class="graph_sun">hgvg</div>
-          <div class="graph_graphic"></div>
-          <div class="graph_sun2">jgjgvgjv</div>
+      <div class="graphic">
+          <div class="graph1"></div>
+          <div class="graph2"></div>
       </div>
+      <div class="day">Today</div>
+      <br><br>
       <div class="hours">
           <div class="hours_1">10 AM</div>
           <div class="hours_2">11 AM</div>
